# data-aquistion-code

./: README.md  acquisition-code.ipynb  main.py  musical_adaptations.csv  pyproject.toml
