[project]
name = "data-aquistion-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "lxml>=6.0.2",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "regex>=2026.2.28",
    "requests>=2.32.5",
]
